Tested implementation of different algorithms
  - BubbleSort
  - InsertionSort
  - MergeSort
  - QuickSort
  - RadixSort