@@ -5,6 +5,7 @@ import javafx.fxml.FXML;
 import javafx.scene.chart.BarChart;
 import javafx.scene.chart.XYChart;
 import org.example.sortingvisualizer.Interface.ISortUpdateListener;
+import org.example.sortingvisualizer.SortingAlgorithms.*;
 import org.example.sortingvisualizer.Utility.Sorter;
 
 
@@ -19,7 +20,7 @@ public class SortingAnimationController implements ISortUpdateListener {
     @FXML
     public void initialize() {
         data = createShuffledArray(50);
-        sorter = new Sorter(new BubbleSort(this));
+        sorter = new Sorter(new MergeSort(this));
         drawChart();
     }
 
@@ -31,14 +32,14 @@ public class SortingAnimationController implements ISortUpdateListener {
     private int[] createShuffledArray(int size) {
         int[] array = new int[size];
         for (int i = 0; i < size; i++) {
-            array[i] = i + 1;
+            array[i] = (i + 1) * 25;
         }
         // Shuffle the array
         for (int i = array.length - 1; i > 0; i--) {
             int j = (int) (Math.random() * (i + 1));
-            int temp = array[i];
+            int tmp = array[i];
             array[i] = array[j];
-            array[j] = temp;
+            array[j] = tmp;
         }
         return array;
     }
@@ -53,12 +54,12 @@ public class SortingAnimationController implements ISortUpdateListener {
     }
 
     private void updateBarChart(int index1, int index2) {
-        XYChart.Series<String, Number> series = barChart.getData().get(0);
+        XYChart.Series<String, Number> series = barChart.getData().getFirst();
         XYChart.Data<String, Number> data1 = series.getData().get(index1);
         XYChart.Data<String, Number> data2 = series.getData().get(index2);
-        Number temp = data1.getYValue();
+        Number tmp = data1.getYValue();
         data1.setYValue(data2.getYValue());
-        data2.setYValue(temp);
+        data2.setYValue(tmp);
     }
 
     @Override
@@ -72,4 +73,24 @@ public class SortingAnimationController implements ISortUpdateListener {
     public void onCompare(int index1, int index2) {
         // Optionally update the UI to reflect comparisons
     }
+
+    @Override
+    public void onUpdate(int[] array) {
+        Platform.runLater(() -> {
+
+            barChart.getData().clear(); // Clear the previous state of the visualization
+
+            XYChart.Series<String, Number> series = new XYChart.Series<>(); // Create a new data series for the bar chart
+
+            // Populate the series with the array values
+            for (int i = 0; i < array.length; i++) {
+                series.getData().add(new XYChart.Data<>(String.valueOf(i), array[i]));
+            }
+
+            barChart.getData().add(series); // Add the series to the bar chart
+
+            // Optional: Add styling/animations
+        });
+    }
+
 }
